Fixed blog spacing.

--- a/src/component/layout-component/Post/styles.module.scss
+++ b/src/component/layout-component/Post/styles.module.scss
@@ -1,7 +1,10 @@
 // @import "../../asset/scss/main.scss";
+@import "../../../asset/scss/main.scss";
+
 .post {
   border-right: 4px solid var(--primary-red);
   border-bottom: 4px solid var(--primary-red);
+  box-sizing: content-box;
   border-radius: 25px;
   /* Top Left | Top Right | Bottom Right | Bottom Left */
   margin-bottom: 20px;
@@ -30,7 +33,7 @@
     min-height: 100px;
     padding-left: 20px;
     padding-right: 20px;
-    margin-bottom: 8px;
+    margin-bottom: 10px;
     h2 {
       color: #ffffff;
       display: inline-block;
@@ -64,5 +67,15 @@
     font-weight: 600;
     font-size: 1.25rem;
     line-height: 1.2rem;
+  }
+}
+
+@include min-width(900px) {
+  .postContent {
+    max-width: 800px;
+    margin: 20px auto;
+    .articleHeader {
+      margin-bottom: 20px;
+    }
   }
 }
